# archpkgbuilds

core/acl/: .SRCINFO  PKGBUILD
core/archlinux-keyring/: .SRCINFO  PKGBUILD  archlinux-keyring.install
core/argon2/: PKGBUILD
core/attr/: .SRCINFO  PKGBUILD
core/audit/: .SRCINFO  PKGBUILD  REUSE.toml
core/autoconf/: .SRCINFO
core/automake/: .SRCINFO
core/b43-fwcutter/: .SRCINFO
core/base/: .SRCINFO  .nvchecker.toml  PKGBUILD
core/base-devel/: PKGBUILD
core/bash/: .SRCINFO  PKGBUILD
core/binutils/: PKGBUILD
core/bison/: .SRCINFO  PKGBUILD
core/brotli/: .SRCINFO
core/btrfs-progs/: .SRCINFO  PKGBUILD
core/bzip2/: .SRCINFO  PKGBUILD
core/ca-certificates/: REUSE.toml
core/coreutils/: .SRCINFO
core/cracklib/: .SRCINFO  PKGBUILD
core/cronie/: PKGBUILD
core/cryptsetup/: .SRCINFO  PKGBUILD
core/curl/: .SRCINFO  PKGBUILD
core/dash/: .SRCINFO  PKGBUILD
core/db/: .SRCINFO  PKGBUILD
core/db5.3/: .SRCINFO  PKGBUILD  REUSE.toml
core/dbus/: .SRCINFO  PKGBUILD  REUSE.toml
core/dbus-broker/: .SRCINFO  PKGBUILD
core/debugedit/: .SRCINFO
core/dhcpcd/: PKGBUILD
core/dialog/: .SRCINFO  PKGBUILD
core/diffutils/: .SRCINFO  .nvchecker.toml  PKGBUILD
core/ding-libs/: .SRCINFO
core/dmraid/: .SRCINFO  PKGBUILD  REUSE.toml
core/dnssec-anchors/: .SRCINFO  PKGBUILD
core/dosfstools/: .SRCINFO
core/e2fsprogs/: .SRCINFO  PKGBUILD
core/ed/: .SRCINFO
core/efibootmgr/: .SRCINFO
core/efivar/: .SRCINFO
core/elfutils/: PKGBUILD
core/expat/: .SRCINFO
core/fakeroot/: .SRCINFO  PKGBUILD
core/file/: .SRCINFO
core/filesystem/: PKGBUILD
core/findutils/: .SRCINFO
core/flex/: .SRCINFO  REUSE.toml
core/gawk/: .SRCINFO
core/gc/: .SRCINFO
core/gcc/: PKGBUILD
core/gdbm/: .SRCINFO
core/gettext/: .SRCINFO  PKGBUILD
core/glib2/: .SRCINFO  PKGBUILD
core/glibc/: PKGBUILD
core/gmp/: .SRCINFO  PKGBUILD
core/gnupg/: .SRCINFO  PKGBUILD
core/gnutls/: PKGBUILD  REUSE.toml
core/gpgme-1/: .SRCINFO  PKGBUILD
core/gpm/: .SRCINFO  .nvchecker.toml  PKGBUILD  REUSE.toml
core/grep/: .SRCINFO  PKGBUILD
core/groff/: .SRCINFO  PKGBUILD  REUSE.toml
core/grub/: PKGBUILD
core/gssproxy/: .SRCINFO  PKGBUILD
core/guile/: .SRCINFO
core/gzip/: .SRCINFO  PKGBUILD
core/hdparm/: .SRCINFO
core/hwdata/: .SRCINFO  PKGBUILD
core/icu/: .SRCINFO  PKGBUILD
core/inetutils/: .SRCINFO  PKGBUILD
core/iproute2/: .SRCINFO  PKGBUILD
core/iptables/: .SRCINFO  PKGBUILD  REUSE.toml
core/iputils/: .SRCINFO  PKGBUILD
core/iw/: .SRCINFO
core/jansson/: .SRCINFO
core/jfsutils/: .SRCINFO  REUSE.toml
core/json-c/: .SRCINFO
core/kbd/: .SRCINFO
core/keyutils/: .SRCINFO  PKGBUILD
core/kmod/: .SRCINFO  PKGBUILD  REUSE.toml
core/krb5/: .SRCINFO  PKGBUILD
core/ldns/: .SRCINFO
core/leancrypto/: .SRCINFO  PKGBUILD
core/less/: .SRCINFO
core/libaio/: .SRCINFO
core/libarchive/: .SRCINFO  PKGBUILD
core/libassuan/: .SRCINFO
core/libbpf/: .SRCINFO
core/libcap/: .SRCINFO
core/libcap-ng/: .SRCINFO  PKGBUILD
core/libedit/: .SRCINFO
core/libevent/: .SRCINFO  PKGBUILD
core/libffi/: .SRCINFO
core/libgcrypt/: .SRCINFO
core/libgpg-error/: .SRCINFO  PKGBUILD
core/libidn2/: .SRCINFO
core/libinih/: .SRCINFO  PKGBUILD
core/libisl/: .SRCINFO
core/libksba/: .SRCINFO
core/libmakepkg-dropins/: .SRCINFO  PKGBUILD
core/libmicrohttpd/: .SRCINFO
core/libmnl/: .SRCINFO
core/libnetfilter_conntrack/: .SRCINFO
core/libnfnetlink/: .SRCINFO
core/libnftnl/: .SRCINFO
core/libnghttp2/: .SRCINFO
core/libnghttp3/: .SRCINFO
core/libngtcp2/: .SRCINFO  PKGBUILD
core/libnl/: .SRCINFO
core/libpcap/: .SRCINFO
core/libpipeline/: .SRCINFO
core/libsasl/: PKGBUILD
core/libseccomp/: .SRCINFO  PKGBUILD
core/libsecret/: .SRCINFO  PKGBUILD  REUSE.toml
core/libssh2/: .SRCINFO
core/libtasn1/: .SRCINFO
core/libtirpc/: .SRCINFO
core/libtool/: PKGBUILD
core/libunistring/: .SRCINFO
core/libusb/: .SRCINFO  PKGBUILD
core/libxcrypt/: .SRCINFO
core/libxml2/: .SRCINFO  PKGBUILD
core/links/: .SRCINFO  PKGBUILD
core/linux/: .SRCINFO  .gitignore  PKGBUILD
core/linux-api-headers/: .SRCINFO
core/linux-firmware/: PKGBUILD
core/logrotate/: PKGBUILD
core/lvm2/: .SRCINFO  PKGBUILD
core/lz4/: .SRCINFO
core/lzo/: .SRCINFO
core/m4/: .SRCINFO  PKGBUILD
core/make/: .SRCINFO
core/man-db/: .SRCINFO  PKGBUILD
core/man-pages/: .SRCINFO
core/mdadm/: .SRCINFO  PKGBUILD
core/mkinitcpio/: PKGBUILD  REUSE.toml
core/mkinitcpio-busybox/: .SRCINFO
core/mkinitcpio-nfs-utils/: .SRCINFO  REUSE.toml
core/mpdecimal/: .SRCINFO
core/nano/: .SRCINFO
core/ncurses/: .SRCINFO  REUSE.toml
core/net-tools/: .SRCINFO  .nvchecker.toml
core/nettle/: .SRCINFO
core/nfs-utils/: PKGBUILD
core/nilfs-utils/: .SRCINFO  PKGBUILD
core/npth/: .SRCINFO
core/nspr/: PKGBUILD
core/nss/: PKGBUILD
core/openldap/: .SRCINFO  PKGBUILD
core/openssh/: .SRCINFO  PKGBUILD
core/openssl/: PKGBUILD
core/openssl-1.1/: REUSE.toml
core/p11-kit/: .SRCINFO  PKGBUILD
core/pacman/: .SRCINFO  PKGBUILD
core/pacman-mirrorlist/: .SRCINFO  PKGBUILD  mirrorlist
core/pam/: .SRCINFO  PKGBUILD
core/pambase/: .SRCINFO  PKGBUILD
core/patch/: .SRCINFO  .nvchecker.toml  PKGBUILD
core/pciutils/: .SRCINFO
core/pcre/: .SRCINFO  REUSE.toml
core/pcre2/: .SRCINFO
core/perl/: .SRCINFO
core/pinentry/: .SRCINFO
core/pkgconf/: .SRCINFO  PKGBUILD  REUSE.toml
core/ppp/: .SRCINFO  PKGBUILD
core/pptpclient/: .SRCINFO
core/procps-ng/: .SRCINFO  PKGBUILD
core/psmisc/: .SRCINFO  PKGBUILD
core/python/: PKGBUILD
core/readline/: .SRCINFO
core/rpcbind/: .SRCINFO  PKGBUILD
core/s-nail/: .SRCINFO
core/sdparm/: .SRCINFO
core/sed/: .SRCINFO  PKGBUILD
core/shadow/: .SRCINFO  PKGBUILD
core/sqlite/: .SRCINFO  PKGBUILD
core/sudo/: .SRCINFO  PKGBUILD
core/syslinux/: .SRCINFO  .nvchecker.toml
core/systemd/: .SRCINFO  PKGBUILD
core/tar/: .SRCINFO  PKGBUILD
core/texinfo/: .SRCINFO
core/thin-provisioning-tools/: .SRCINFO  PKGBUILD
extra/c3c/: .SRCINFO  .nvchecker.toml  CMakeLists.txt  PKGBUILD  cmake.txt  llvm-22.patch
(+28177 files in other folders)
